Fix table layout bug

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -70,6 +70,12 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+/* Fix table bug: table larger than container */
+td {
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
 /* Selectable table rows styles
 -------------------------------------------------- */
 table.selectable tbody tr.selectedRow {
